--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,30 +3,57 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
+      - main 
+  pull_request:
+    branches:
       - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Checkout code
+     # 1단계: Flutter 설치 및 의존성 설치
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      # Docker Hub Login using Access Token
+      - name: Install Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.22.2'
+
+      - name: Run Flutter Doctor
+        run: flutter doctor -v
+        working-directory: ./prob
+
+      - name: Install dependencies
+        run: flutter pub get
+        working-directory: ./prob
+
+      # 2단계: Docker 빌드
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-
-      # Build Docker image
+        
       - name: Build Docker image
-        run: docker build -t your-dockerhub-junwoocha/flutter-image .
+        run: docker build -t junwoocha-flutter:latest .
 
-      # Push Docker image
       - name: Push Docker image
-        run: docker push your-dockerhub-junwoocha/-image
+        run: docker push junwoocha-flutter:latest
+
+      # 3단계: 배포
+      - name: SSH to EC2 and pull the latest Docker image
+        uses: appleboy/ssh-action@v0.1.4
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ SSH_PRIVATE_KEY }}
+          script: |
+            docker pull junwoocha-flutter:latest
+            docker run -d -p 80:80 junwoocha-flutter:latest
 
 
 # name: Flutter CI
