--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -1,21 +1,19 @@
-# Flutter 빌드를 위한 환경 설정
 FROM ubuntu:24.04 as build-env
 
-# 필수 패키지 설치 (Flutter와 관련된 환경 설정)
+# 필수 패키지 설치
 RUN apt-get update && apt-get install -y \
     curl \
     unzip \
-    xz-utils \
     git \
-    bash
+    bash \
+    snapd
 
-# Flutter SDK 다운로드 및 설치
-RUN curl -LO https://storage.googleapis.com/download.flutter.io/flutter_linux_v3.13.2-stable.tar.xz
-RUN tar xf flutter_linux_v3.13.2-stable.tar.xz
-RUN mv flutter /opt/
+# Snapd 활성화 및 Flutter 설치
+RUN systemctl enable --now snapd.socket
+RUN snap install flutter --classic
 
 # PATH에 Flutter 추가
-ENV PATH="/opt/flutter/bin:${PATH}"
+ENV PATH="/snap/flutter/current/bin:${PATH}"
 
 # Flutter 의존성 설치
 RUN flutter doctor
