--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -1,36 +1,35 @@
-FROM ubuntu:24.04 as build-env
-
-RUN apt update
-RUN apt upgrade -y
-RUN apt install -y wget
-
-# 필수 패키지 설치
 RUN apt-get update && apt-get install -y \
     curl \
     unzip \
     git \
     bash \
-    snapd
-RUN systemctl start snapd
-RUN systemctl enable snapd
+    xz-utils \
+    libglu1-mesa \
+    && apt-get clean
 
-# Snapd 활성화 및 Flutter 설치
-RUN snap install flutter --classic
+# 작업 디렉토리 설정
+WORKDIR /opt
+
+# Flutter SDK를 GitHub에서 클론
+RUN git clone https://github.com/flutter/flutter.git -b stable
 # android studio 설치
 RUN apt-get install libc6:i386 libncurses5:i386 libstdc++6:i386 lib32z1 libbz2-1.0:i386
 # chrome 설치
 RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
 RUN apt install -y ./google-chrome-stable_current_amd64.deb
 
-# Flutter 의존성 설치
-RUN flutter doctor
+# Flutter 환경 변수 설정
+ENV PATH="/opt/flutter/bin:${PATH}"
 
-# 작업 디렉토리 설정
+# 애플리케이션 작업 디렉토리 설정
 WORKDIR /app
 
-# pubspec.yaml 파일을 복사하고 Flutter 의존성 설치
+# pubspec.yaml 파일 복사 및 Flutter 의존성 설치
 COPY pubspec.yaml .
 RUN flutter pub get
+
+# Flutter 의존성 설치
+RUN flutter doctor
 
 # 나머지 애플리케이션 코드 복사
 COPY . .
