--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -1,36 +1,35 @@
 FROM ubuntu:24.04 as build-env
 
-# 필수 패키지 설치 및 시스템 업데이트
 RUN apt-get update && apt-get install -y \
     curl \
     unzip \
+    zip \
     git \
     bash \
     xz-utils \
-    zip \
     libglu1-mesa \
-    openjdk-8-jdk \
-    software-properties-common \
-    libc6:i386 libncurses5:i386 libstdc++6:i386 lib32z1 libbz2-1.0:i386 \
-    && apt-add-repository ppa:maarten-fonville/android-studio \
-    && apt-get install -y android-studio \
-    && apt-get clean && rm -rf /var/lib/apt/lists/*
+    && apt-get clean
 
-# Java 환경 변수 설정
+# 작업 디렉토리 설정
+WORKDIR /opt
+
+# Flutter SDK를 GitHub에서 클론
+RUN apt-get install -y curl git unzip xz-utils zip libglu1-mesa
+# java 설치
+RUN apt-get install openjdk-8-jdk
 ENV JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
 ENV PATH="$JAVA_HOME/bin:$PATH"
+RUN java -version
+# android studio 설치
+# RUN apt install -y libc6:i386 libncurses5:i386 libstdc++6:i386 lib32z1 libbz2-1.0:i386
+RUN apt-add-repository ppa:maarten-fonville/android-studio
+RUN apt-get install -y android-studio   
+# chrome 설치
+RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+RUN apt install -y ./google-chrome-stable_current_amd64.deb
 
-# Flutter SDK 설치
-RUN git clone https://github.com/flutter/flutter.git -b stable /opt/flutter
+# Flutter 환경 변수 설정
 ENV PATH="/opt/flutter/bin:${PATH}"
-
-# Flutter 의존성 다운로드
-RUN flutter precache
-
-# Chrome 설치
-RUN wget -O google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb \
-    && apt install -y ./google-chrome.deb \
-    && rm google-chrome.deb
 
 # 애플리케이션 작업 디렉토리 설정
 WORKDIR /app
@@ -39,8 +38,13 @@ WORKDIR /app
 COPY pubspec.yaml .
 RUN flutter pub get
 
-# Flutter 애플리케이션 코드 복사 및 웹 빌드
+# Flutter 의존성 설치
+RUN flutter doctor
+
+# 나머지 애플리케이션 코드 복사
 COPY . .
+
+# Flutter 웹 애플리케이션 빌드
 RUN flutter build web
 
 # 최종 배포 환경
