--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -18,8 +18,12 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /opt
 
 # chrome 설치
-RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-RUN apt install -y ./google-chrome-stable_current_amd64.deb
+RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && \
+    dpkg -i google-chrome-stable_current_amd64.deb && \
+    apt-get install -f && \
+    rm google-chrome-stable_current_amd64.deb
+#RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+#RUN apt install -y ./google-chrome-stable_current_amd64.deb
 
 # android studio 설치
 RUN apt-add-repository ppa:maarten-fonville/android-studio
