--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -1,5 +1,10 @@
 FROM ubuntu:24.04 as build-env
 
+RUN dpkg --add-architecture i386
+RUN apt-get install -y libc6:i386
+RUN apt-get install -y libncurses5:i386
+RUN apt-get install -y libstdc++6:i386
+
 RUN apt-get update && apt-get install -y \
     curl \
     unzip \
@@ -11,9 +16,6 @@ RUN apt-get update && apt-get install -y \
     libglu1-mesa \
     software-properties-common \
     openjdk-8-jdk \
-    libc6:i386 \
-    libncurses5:i386 \
-    libstdc++6:i386 \ 
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
