--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -1,11 +1,12 @@
 FROM ubuntu:24.04 as build-env
 
 RUN dpkg --add-architecture i386
+RUN apt-get update
 RUN apt-get install -y libc6:i386
 RUN apt-get install -y libncurses5:i386
 RUN apt-get install -y libstdc++6:i386
 
-RUN apt-get update && apt-get install -y \
+RUN apt-get install -y \
     curl \
     unzip \
     zip \
