--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
 
       # 3단계: 배포
       - name: SSH to EC2 and pull the latest Docker image
-        uses: appleboy/ssh-action@v0.1.4
+        uses: appleboy/ssh-action@master    # appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
