--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.22.2'
-
-     #  - name: Run Flutter Doctor
-     #    run: flutter doctor -v
-     #    working-directory: ./prob
-
+          
       - name: Install dependencies
         run: flutter pub get
         working-directory: ./prob
@@ -37,25 +33,40 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-        
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest ./prob
+      - name: Install Docker Compose
+        run: |
+          curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          chmod +x /usr/local/bin/docker-compose
 
-      - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest
+      # 4. Docker Compose 빌드 및 푸시
+      - name: Build and push images using Docker Compose
+        run: |
+          docker-compose -f docker-compose.yml build
+          docker-compose -f docker-compose.yml push
 
       # 3단계: 배포
       - name: SSH to EC2 and pull the latest Docker image
-        uses: appleboy/ssh-action@master    # appleboy/ssh-action@v0.1.4
+        uses: appleboy/ssh-action@master  
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest
-            docker run -d -p 80:80 ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest
+            mkdir -p /home/ubuntu/dobu/frontend
+            cd /home/ubuntu/dobu/frontend
+            
+            sudo docker-compose pull
+            sudo docker-compose down
+            sudo docker-compose up -d
+            sudo docker-compose ps
+            # docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest
+            # docker run -d -p 80:80 ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest
 
-
+      # - name: Build Docker image
+      #   run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest ./prob
+      # - name: Push Docker image
+      #   run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest
+      
 # name: Flutter CI
 
 # on:
