--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,14 +37,19 @@ jobs:
         run: |
           curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           chmod +x /usr/local/bin/docker-compose
-
+          
+      # 3. .env 파일 생성
+      - name: Create .env file for Docker Compose
+        run: |
+          echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" > .env
+          
       # 4. Docker Compose 빌드 및 푸시
       - name: Build and push images using Docker Compose
         run: |
           docker-compose -f docker-compose.yml build
           docker-compose -f docker-compose.yml push
 
-      # 3단계: 배포
+      # 배포
       - name: SSH to EC2 and pull the latest Docker image
         uses: appleboy/ssh-action@master  
         with:
