--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -62,12 +62,12 @@ COPY . .
 # Flutter 웹 애플리케이션 빌드
 RUN flutter build web
 
-# # 최종 배포 환경
-# FROM nginx:1.21.1-alpine
+# 최종 배포 환경
+FROM nginx:1.21.1-alpine
 
-# # 빌드된 Flutter 애플리케이션을 Nginx 디렉토리로 복사
-# COPY --from=build-env /app/build/web /usr/share/nginx/html
+# 빌드된 Flutter 애플리케이션을 Nginx 디렉토리로 복사
+COPY --from=build-env /app/build/web /usr/share/nginx/html
 
-# # Nginx 서버 실행
-# EXPOSE 80
-# CMD ["nginx", "-g", "daemon off;"]
+# Nginx 서버 실행
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
