--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -12,8 +12,7 @@ RUN apt-get update && apt-get install -y \
 RUN git clone https://github.com/flutter/flutter.git /opt/flutter
 ENV PATH="/opt/flutter/bin:${PATH}"
 
-# Flutter 버전 지정 (필요에 따라)
-RUN flutter --version
+RUN flutter doctor
 
 # 작업 디렉토리 설정
 WORKDIR /app
