--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -28,7 +28,7 @@ RUN apt-get install -y \
 ENV JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
 ENV PATH="$JAVA_HOME/bin:$PATH"
 RUN java -version
-
+WORKDIR /opt
 RUN wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
     add-apt-repository "deb [arch=amd64] https://dl.google.com/linux/chrome/deb/ stable main" && \
     apt-get update && \
