--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -4,7 +4,8 @@ RUN apt-get update && apt-get install -y \
     curl \
     git \
     unzip \
-    && rm -rf /var/lib/apt/lists/*
+    wget apt-transport-https ca-certificates && \
+    rm -rf /var/lib/apt/lists/*
 
 # Flutter 설치(chrome, java,  android studio필요)
 RUN git clone https://github.com/flutter/flutter.git /opt/flutter
@@ -28,10 +29,8 @@ RUN apt-get install -y \
 ENV JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
 ENV PATH="$JAVA_HOME/bin:$PATH"
 RUN java -version
-RUN wget -q -O /usr/share/keyrings/google-chrome-keyring.gpg https://dl.google.com/linux/linux_signing_key.pub
-RUN echo "deb [arch=amd64 signed-by=/usr/share/keyrings/google-chrome-keyring.gpg] https://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list
-RUN apt-get update && apt-get install -y google-chrome-stable && \
-    rm -rf /var/lib/apt/lists/*
+RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+RUN apt install -y ./google-chrome-stable_current_amd64.deb
 
 
 # 비루트 사용자 추가
