--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,20 +11,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-     # # 1단계: Flutter 설치 및 의존성 설치
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # - name: Install Flutter
-      #   uses: subosito/flutter-action@v2
-      #   with:
-      #     flutter-version: '3.22.2'
-          
-      # - name: Install dependencies
-      #   run: flutter pub get
-      #   working-directory: ./prob
-
-      # 2단계: Docker 빌드
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -38,12 +24,12 @@ jobs:
           curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           chmod +x /usr/local/bin/docker-compose
           
-      # 3. .env 파일 생성
+      # .env 파일 생성
       - name: Create .env file for Docker Compose
         run: |
           echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" > .env
           
-      # 4. Docker Compose 빌드 및 푸시
+      # Docker Compose 빌드 및 푸시
       - name: Build and push images using Docker Compose
         run: |
           docker-compose -f docker-compose.yml build
