--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
           
       # Docker Compose 빌드 및 푸시
       - name: Build and push images using Docker Compose
+        working-directory: ./FlutterWebDobu
         run: |
           docker-compose -f docker-compose.yml build
           docker-compose -f docker-compose.yml push
