--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,7 @@ services:
     image: nginx:alpine
     container_name: nginx
     volumes:
-      - ./flutter.conf:/etc/nginx/conf.d/flutter.conf  # 로컬에서 만든 nginx.conf 파
-일을 마운트
+      - ./flutter.conf:/etc/nginx/conf.d/flutter.conf  # 로컬에서 만든 nginx.conf 파일을 마운트
       - ./build/web:/usr/share/nginx/html   # Flutter 빌드된 웹 파일을 Nginx 컨테이>너에 마운트
     ports:
       - "8080:80"
