--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,10 @@ version: '3.7'
 
 services:
   flutter-app:
+    build:
+      context: . 
+      dockerfile: Dockerfile
+    container_name: flutter
     image: "junwoocha/flutter-dobu:latest"
     container_name: flutter
     ports:
