--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -1,22 +1,21 @@
+# Flutter 빌드 환경
 FROM cirrusci/flutter:stable AS build-env
 
-# Flutter 설치
+# Flutter 설치(chrome, java, android studio필요)
 RUN git clone https://github.com/flutter/flutter.git /usr/local/flutter
 ENV PATH="/usr/local/flutter/bin:/usr/local/flutter/bin/cache/dart-sdk/bin:${PATH}"
 
-RUN mkdir /app/
-
-# 비루트 사용자 추가
 RUN useradd -ms /bin/bash flutteruser
-RUN chown -R flutteruser:flutteruser /usr/local/flutter
+
+# /app 디렉토리 권한 변경을 root로 먼저 수행
+COPY . /app/
+USER root
 RUN chown -R flutteruser:flutteruser /app
+
+# 사용자 변경
 USER flutteruser
 
-# 파일 복사 및 권한 설정
-COPY . /app/
-RUN chown -R flutteruser:flutteruser /app/
-RUN chmod -R 755 /app/  # 권한 설정
-
+# Flutter 명령어 실행
 WORKDIR /app/
 RUN flutter pub get
 RUN flutter build web
