--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -4,6 +4,7 @@ FROM cirrusci/flutter:stable AS build-env
 # Flutter 설치(chrome, java, android studio필요)
 RUN git clone https://github.com/flutter/flutter.git /usr/local/flutter
 ENV PATH="/usr/local/flutter/bin:/usr/local/flutter/bin/cache/dart-sdk/bin:${PATH}"
+RUN chown -R flutteruser:flutteruser /usr/local/flutter
 
 RUN useradd -ms /bin/bash flutteruser
 
