--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
             cd /home/ubuntu/dobu/frontend
             sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest
             sudo docker stop flutter1
+            sudo docker rm flutter1
             sudo docker run -d -p 8080:80 --name flutter1 ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest
             
 
