--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,7 @@ on:
   push:
     branches:
       - main 
-  pull_request:
-    branches:
-      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,67 +21,29 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest ./prob
-      - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest
+      - name: Build and Push Docker image
+        run: |
+          docker-compose -f docker-compose.yml build 
+          docker-compose -f docker-compose.yml push
           
       # 배포
-      - name: SSH to EC2 and pull the latest Docker image
+      - name: Deploy to EC2
         uses: appleboy/ssh-action@master  
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            mkdir -p /home/ubuntu/dobu/frontend
-            cd /home/ubuntu/dobu/frontend
-            sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest
-            sudo docker stop flutter1
-            sudo docker rm flutter1
-            sudo docker run -d -p 8080:80 --name flutter1 ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest
+            cd /home/ubuntu/dobu
+            docker-compose -f docker-compose.yml down
+            docker-compose -f docker-compose.yml up -d
             
+# - name: Build Docker image
+#   run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest ./prob
+# - name: Push Docker image
+#   run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest
 
-      
-# name: Flutter CI
-
-# on:
-#   push:
-#     branches:
-#       - main
-#   pull_request:
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#     # 1. 저장소 코드 체크아웃
-#     - name: Checkout repository
-#       uses: actions/checkout@v3
-
-#     # 2. Flutter 설치
-#     - name: Install Flutter
-#       uses: subosito/flutter-action@v2
-#       with:
-#         flutter-version: '3.22.2'
-
-#     # 3. Flutter Doctor (옵션)
-#     - name: Run Flutter Doctor
-#       run: flutter doctor -v
-#       working-directory: ./prob
-
-#     # 4. 의존성 설치
-#     - name: Install dependencies
-#       run: flutter pub get
-#       working-directory: ./prob
-
-#     # 5. 테스트 실행
-#     # - name: Run tests
-#     #   run: flutter test
-#     #   working-directory: ./prob
-
-#     # 6. 빌드 실행 (선택)
-#     - name: Build Web
-#       run: flutter build web
-#       working-directory: ./prob
+# sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest
+# sudo docker stop flutter1
+# sudo docker rm flutter1
+# sudo docker run -d -p 8080:80 --name flutter1 ${{ secrets.DOCKER_HUB_USERNAME }}/flutter-dobu:latest
