--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
     image: nginx:alpine
     container_name: nginx
     volumes:
-      - /home/ubuntu/dobu/nginx.conf:/etc/nginx/nginx.conf:ro # nginx 설정 파일 마운트
+      - /etc/nginx/nginx.conf:/etc/nginx/nginx.conf:ro 
+      - /etc/nginx/conf.d:/etc/nginx/conf.d:ro
     ports:
       - "80:80"         
     networks:
