--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /home/ubuntu/dobu
+            docker-compose -f docker-compose.yml pull
             docker-compose -f docker-compose.yml down
             docker-compose -f docker-compose.yml up -d
             
