--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -1,6 +1,7 @@
 FROM cirrusci/flutter:stable AS build-env
 
 WORKDIR /app
+RUN git config --global --add safe.directory /sdks/flutter
 COPY . /app/
 
 RUN useradd -ms /bin/bash flutteruser
